<resources>
    <string name="app_name">Calculator</string>

    <string name="equals">=</string>
    <string name="decimalPoint">.</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="pi">π</string>
    <string name="e">℮</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="exponent">^</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="squareRoot">|</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="leftParenthesis">(</string>
    <string name="rightParenthesis">)</string>
    <string name="template10Power">10 ͯ</string>
    <string name="templatePower2">x2</string>
    <string name="negativeLeftParenthesis">(-</string>

    <string name="clearAll">C</string>

    <string name="history">History</string>
    <string name="keyPad">KeyPad</string>
    <string name="backspace">backspace</string>

    <string name="backspace_description">backspace button</string>
    <string name="clear">clear</string>
    <string name="no_history">no history</string>
    <string name="parenthesis">( )</string>
    <string name="choose_color">Choose Color</string>
    <string name="pick_new_theme_color_button_icon">pick new theme color button icon</string>
    <string name="open_settings">open settings</string>
    <string name="dark_mode">dark mode</string>
    <string name="theme">Theme</string>
    <string name="settings_theme_color_item_title">theme color</string>
    <string name="clear_calculation_history">clear calculation history</string>
    <string name="save_the_settings">save the settings</string>
</resources>