<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/toolsLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etType"
            style="@style/typeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="testHint"
            tools:hint="type"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:textSize="20sp"
            android:textColor="?attr/theme_color"
            tools:hint="Answer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toolsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/keyPad_layout"
        android:weightSum="5">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history"
            android:textColor="?attr/theme_color"
            android:textSize="25sp" />


        <ImageView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/ivChangeThemeColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/pick_new_theme_color_button_icon"
            android:src="@drawable/ic_pick_color" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/keyPad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/historyFragment"
        android:layout_alignLeft="@id/historyFragment"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center">

        <TableRow style="@style/tableRow">

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/clearAll"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/clearAll" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/parenthesis"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/parenthesis" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/division"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/division" />

            <ImageView
                android:id="@+id/backSpace"
                style="@style/BackSpaceButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/backspace_description" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_1"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number1" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_2"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number2" />


            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_3"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number3" />


            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/multiply"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/multiplication" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_4"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number4" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_5"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number5" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_6"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number6" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/addition"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/addition" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_7"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number7" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_8"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number8" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_9"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number9" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/subtraction"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/subtraction" />

        </TableRow>

        <TableRow style="@style/tableRow">

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/negativeP"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/negativeLeftParenthesis" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/number_0"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/number0" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/decimalPoint"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:button_text="@string/decimalPoint" />

            <com.awab.calculator.view.CustomSelectableTextView
                android:id="@+id/equals"
                style="@style/EqualButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </TableRow>

    </TableLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/historyFragment"
        android:name="com.awab.calculator.view.HistoryFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignTop="@id/keyPad_layout"
        android:layout_alignBottom="@id/keyPad_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
